// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single ops 1`] = `
"
INSERT INTO \\"schema\\"\\"test_alias\\" (user_id, name) VALUES
  ('1', 'n1') ON CONFLICT DO NOTHING RETURNING user_id AS id
"
`;

exports[`single ops 2`] = `
"
INSERT INTO \\"schema\\"\\"test_alias\\" (user_id, name) VALUES
  ('2', 'n2')
  ON CONFLICT (user_id) DO UPDATE SET name=EXCLUDED.name RETURNING user_id AS id
"
`;

exports[`single ops 3`] = `
"
INSERT INTO \\"schema\\"\\"test_alias\\" (user_id, name) VALUES
  (id_gen(), 'n3') ON CONFLICT DO NOTHING RETURNING user_id AS id
"
`;

exports[`single ops 4`] = `""`;

exports[`single ops 5`] = `
"
INSERT INTO \\"schema\\"\\"test_alias\\" (user_id, name) VALUES
  ('101', 'n11')
  ON CONFLICT (user_id) DO UPDATE SET name=EXCLUDED.name RETURNING user_id AS id
"
`;

exports[`single ops 6`] = `
"
DELETE FROM \\"schema\\"\\"test_alias\\" WHERE user_id IN('1') RETURNING user_id AS id
"
`;

exports[`single ops 7`] = `
"
DELETE FROM \\"schema\\"\\"test_alias\\" WHERE user_id IN('2') AND (1=1) RETURNING user_id AS id
"
`;

exports[`single ops 8`] = `
"
SELECT user_id, name, user_id AS id FROM \\"schema\\"\\"test_alias\\"
  WHERE user_id IN('<id>')
"
`;

exports[`single ops 9`] = `
"
SELECT user_id, name, user_id AS id FROM \\"schema\\"\\"test_alias\\"
  WHERE user_id=ANY('{<id>}')
"
`;

exports[`single ops 10`] = `
"
SELECT COUNT(1) AS count FROM \\"schema\\"\\"test_alias\\"
  WHERE user_id='<id>'
"
`;

exports[`single ops 11`] = `
"
SELECT user_id, name, user_id AS id FROM \\"schema\\"\\"test_alias\\"
  WHERE user_id='<id>'
  LIMIT 10
"
`;
